<resources>
    <string name="app_name">Movies</string>
    <string name="title_home">Home</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_favorites">Favorites</string>

    <string name="no_connection">No internet connection</string>
    <string name="try_again">Please try again</string>
    <string name="what_are_you_looking_for">All you need about movies</string>
    <string name="search_movies">Search movies</string>
    <string name="now_playing">Now playing</string>
    <string name="search">Search</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="genres">Genres</string>
    <string name="in_fav">In favorites</string>
    <string name="empty_favorites">Empty favorites</string>
    <string name="empty">Empty</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
</resources>